# kodi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  make-dmg.sh  spec-opensource.json  spec-proprietary.json  spec.json  version.txt
docs/: README.Android.md  README.Fedora.md  README.FreeBSD.md  README.Linux.md  README.RaspberryPi.md  README.Ubuntu.md  README.openSUSE.md
system/: addon-manifest.xml  peripherals.xml
userdata/: advancedsettings.xml
xbmc/: Application.cpp  FileItem.cpp  GUIInfoManager.cpp  GUIInfoManager.h  GUILargeTextureManager.cpp  LangInfo.cpp  LangInfo.h  ServiceBroker.cpp  ServiceBroker.h  ServiceManager.cpp  ServiceManager.h
xbmc/filesystem/ipfs/: CMakeLists.txt  IIPFS.h  IPFS.cpp  IPFS.h  IPFSDirectory.cpp  IPFSDirectory.h  IPFSFile.cpp  IPFSFile.h  IPFSService.cpp  IPFSService.h  IPFSUtils.cpp  IPFSUtils.h  ZstdCompression.cpp  ZstdCompression.h
xbmc/filesystem/ipfs/block/: CMakeLists.txt  IPFSBlockUtils.cpp  IPFSBlockUtils.h
xbmc/filesystem/ipfs/ipid/: CMakeLists.txt  IPID.cpp  IPID.h
xbmc/filesystem/ipfs/ipld/: CMakeLists.txt  IPLDJson.cpp  IPLDJson.h
xbmc/filesystem/ipfs/test/: CMakeLists.txt  IPFSTestUtils.h  TestIPFS.cpp  TestIPFSBlockUtils.cpp  TestIPFSDirectory.cpp  TestIPFSFile.cpp  TestIPFSUtils.cpp  TestIPID.cpp  TestIPLDJson.cpp  TestUnixFSDirectory.cpp  TestUnixFSJson.cpp
xbmc/filesystem/ipfs/unixfs/: CMakeLists.txt  UnixFSCodec.cpp  UnixFSCodec.h  UnixFSDirectory.cpp  UnixFSDirectory.h  UnixFSImporter.cpp  UnixFSImporter.h  UnixFSJson.cpp  UnixFSJson.h  UnixFSJsonTypes.h  UnixFSResolver.cpp  UnixFSResolver.h
(+647 files in other folders)
